examples/test/testpolicy17336.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17336
  namespace: namespace213
spec:
  podSelector:
    matchLabels:
      key8: value48
      key22: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value6
          key25: value45
          key41: value27
      podSelector:
        matchLabels:
          key23: value28
          key48: value25
          key5: value40
